--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,38 +1,33 @@
-.App {
+@import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
+h1 {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  background: #F4E9E1;
+  color: #1F0800;
+  font-family: 'Raleway',
+  sans-serif;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.category-container {
   display: flex;
-  flex-direction: column;
+  justify-content: space-evenly;
+  margin-top: 20rem;
+}
+
+a {
+  text-decoration: none;
+  color: #1F0800;
+}
+
+.mainCategory {
+  border: 1px solid #1F0800;
+  padding: 1rem;
+  border-radius: 8px;
+  width: 10vw;
+  height: 10vh;
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
