--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -18,7 +18,22 @@ nav ul li:first-child {
 }
 
 li {
-    margin-right: 1rem;
     font-weight: bold;
     font-size: 1.25rem;
+}
+
+nav a {
+    color:#F4E9E1;
+    font-weight: bold;
+    font-size: 1.25rem;
+    text-align: right;
+}
+
+.categoryNavList {
+    display: flex;
+    width: 90vw;
+    justify-content: flex-end;
+}
+.categoryNavList a {
+    margin-left: 1rem;
 }
