--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -7,13 +7,13 @@ body {
   sans-serif;
 }
 
-h1 {
-  text-align: center;
-}
-
 h2 {
-  margin-left: 1rem;
+  border: solid 1px #D1925C;
   font-size: 1.25rem;
+  display: flex;
+  justify-content: center; 
+  padding: 2rem;;
+  width: 80vw;
 }
 
 .category-container {
@@ -43,9 +43,20 @@ a {
 .mainCategoryImage {
     width: 15rem;
 }
-
+ 
+.mainCategoryText {
+  color: #F4E9E1;
+  background-color:#1F0800;
+  width: 100%;
+}
 @media screen and (min-width: 800px) {
   .category-container {
     flex-direction: row;
   }
+}
+
+.title-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
