--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -19,7 +19,7 @@ h2 {
 .category-container {
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  /* justify-content: space-around; */
   height: 100vh;
   align-items: center;
 }
@@ -30,18 +30,17 @@ a {
 }
 
 .mainCategory {
-  border: 1px solid #1F0800;
+  background-position: center;
+  background-size: cover;
+  border: 6px solid white;
   padding: 1rem;
   border-radius: 8px;
-  width: 10vw;
+  width: 25vw;
   height: 10vh;
   display: flex;
   align-items: center;
   justify-content: center;
-}
-
-.mainCategoryImage {
-    width: 15rem;
+  margin: 1rem;
 }
  
 .mainCategoryText {
@@ -52,6 +51,9 @@ a {
 @media screen and (min-width: 800px) {
   .category-container {
     flex-direction: row;
+  }
+  .mainCategory {
+    height: 40vh;
   }
 }
 
