--- a/src/components/Error/Error.css
+++ b/src/components/Error/Error.css
@@ -1,28 +1,41 @@
 .error-message {
   display: flex;
-  flex-direction: column;
+  justify-content: center;
   align-items: center;
   margin: 1em;
-  padding: 4.5em;
+  height: 30vh;
+  padding: 4em 4em 0 4em;
   background: url('./error-img.jpg') #1F0800;
-  background-size: cover;
+  background-position: center;
+  background-size: 150%;
   box-shadow: 4px 4px 12px 0 rgba(142, 137, 137, 0.8),
       -6px -6px 16px 0 rgba(223, 219, 219, 0.8);
-  color: #1F0800;
+  border-radius: 7px;
 }
 
-.error-message h2 {
+.message {
+  color: #F4E9E1;
+  background-color:#1F0800;
+  text-align: center;
+  width:70vw;
+  padding: 1em;
+  margin: 0;
+  border-radius: 7px;
+}
+
+.message h2 {
   border: none;
+  width: inherit;
   padding: 0;
   margin: 0;
 }
 
-.error-message p {
+.message p {
   padding: 0;
   margin: .5em;
 }
 
-.error-message h3 {
+.message h3 {
   padding: 0;
   margin: 0;
 }
