Format images to align centrally

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -14,23 +14,27 @@ h5 {
 .dev {
     border: solid 1px #D1925C;
     border-radius: 7px;
+    width: 6em;
     padding: 1em;
+    text-align: center;
 }
 
 .dev-container {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     margin-bottom: 2em;
-    width: 80%;
 }
 
 .links {
     display: flex;
+    justify-content: center;
     flex-direction: row;
+    flex-wrap: wrap;
 }
 
 .links img {
-  width: 2rem;
+  width: 2em;
+  margin: .1em;
 }
 
 @media screen and (min-width: 800px) {
