--- a/src/components/Cosmetic/Cosmetic.css
+++ b/src/components/Cosmetic/Cosmetic.css
@@ -8,34 +8,33 @@
 }
 
 .cosmeticCard {
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    border: 1px solid black;
-    border-radius: 8px;
-    align-items: center;
+        box-sizing: border-box;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        border: 1px solid black;
+        border-radius: 8px;
+        align-items: center;
+        background: white;
+        /* width: 100%; */
+        /* width: 51vw; */
+        padding: 1rem;
+        text-align: center;
 }
 
 .cosmeticCardImage {
    width: 100%;
    object-fit: contain;
-   /* height: 11rem; */
    border-top-left-radius: 8px;
    border-top-right-radius: 8px;
+   margin-bottom: 1rem;
 }
 
-/* .categoryProductType {
-    background-position: center;
-    background-size: cover;
-    border: 6px solid white;
-    box-shadow: 4px 4px 12px 0 rgba(142, 137, 137, 0.8);
-    padding: 1rem;
-    border-radius: 8px;
-    width: 25vw;
-    height: 20vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 0.5rem;
-} */
+.cosmeticDetail {
+    margin: 0;
+}
+
+.tags {
+    border: 1px solid black;
+    padding: .5rem;
+}
