--- a/src/components/Items/Items.css
+++ b/src/components/Items/Items.css
@@ -1,6 +1,6 @@
 .productTypeContainer {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-gap: 1rem;
+    grid-gap: .5rem;
     padding: 1.25rem;
 }
