--- a/src/components/Cosmetic/Cosmetic.css
+++ b/src/components/Cosmetic/Cosmetic.css
@@ -16,10 +16,9 @@
         border-radius: 8px;
         align-items: center;
         background: white;
-        /* width: 100%; */
-        /* width: 51vw; */
         padding: 1rem;
         text-align: center;
+        height: 100%;
 }
 
 .cosmeticCardImage {
