--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -2,8 +2,8 @@ input {
     border: none;
     border-radius: 6px;
     display: flex;
-    height: 80%;
-    width: 30%;
+    height: 70%;
+    width: 40%;
     text-align: center;
 }
 .searchButton {
@@ -11,8 +11,9 @@ input {
     border-radius: 6px;
     display: flex;
     align-items: center;
-    height: 75%;
-    width: 8%;
+    justify-content: center;
+    height: 70%;
+    width: 10%;
     background-color: #D1925C;
     margin-left: 10px;
 }
