--- a/src/components/SearchResults/SearchResults.css
+++ b/src/components/SearchResults/SearchResults.css
@@ -4,3 +4,17 @@
     grid-gap: .5rem;
     padding: 1.25rem;
 }
+
+.cosmeticCard {
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    border: 1px solid #1f0800;
+    border-radius: 8px;
+    align-items: center;
+    background: white;
+    padding: 1rem;
+    text-align: center;
+    height: 100%;
+}
