--- a/src/components/SingleProduct/SingleProduct.css
+++ b/src/components/SingleProduct/SingleProduct.css
@@ -43,7 +43,7 @@
 .singleProductBrand {
     margin-top: 0;
     border: solid 2px #1F0800;
-    width: 66%;
+    width: 60vw;
 }
 .singleProductDescriptionWrapper {
     border: solid 1px #5E6353;
@@ -52,7 +52,7 @@
 
 .singleProductTitle {
     margin-bottom: 0;
-    width: 60%;
+    width: 60vw;
 }
 
 .tags {
