--- a/src/components/Cosmetic/Cosmetic.css
+++ b/src/components/Cosmetic/Cosmetic.css
@@ -42,12 +42,19 @@
    justify-content: center;
    margin: 1rem;
 }
+.cosmeticCardImage:active {
+  box-shadow: 4px 4px 12px 0 #D1925C;
+}
+  
+.cosmeticCardImage:hover {
+  box-shadow: 4px 4px 12px 0 #A63D10;
+}
 
 .cosmeticDetail {
-    margin: 0;
+  margin: 0;
 }
 
 .tags {
-    border: 1px solid #1f0800;
-    padding: .5rem;
+  border: 1px solid #1f0800;
+  padding: .5rem;
 }
