Add media queries

--- a/src/Components/Items/Items.css
+++ b/src/Components/Items/Items.css
@@ -6,4 +6,7 @@
 }
 
 @media screen and (min-width: 800px) {
-} 
+    .productTypeContainer {
+        grid-template-columns: repeat(3, 1fr)
+    }
+  }
