--- a/src/Components/Details/Details.css
+++ b/src/Components/Details/Details.css
@@ -1,5 +1,11 @@
 .productDetailsContainer {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+@media screen and (min-width: 800px) {
+  .detailsPageWrapper {
+    width: 72vw;
+  }
 }
