--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -1,6 +1,9 @@
 nav {
     background: #1F0800;
     color: #F4E9E1;
+    display: flex;
+    padding-left: 1em;
+    padding-right: 1em;
 }
 
 nav ul {
